*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5561 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in release 0.1d:
+
+ * Support krb5-realm.DOMAIN in DNS
+ * bug fixes
+
 Changes in release 0.1c:
 
  * fix ASN.1 encoding of signed integers
