--- a/appl/login/ChangeLog
+++ b/appl/login/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 18 11:36:10 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* Makefile.am: include Makefile.am.common
+
 Thu Mar 11 17:53:36 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* utmpx_login.c: add some consts
