--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,5 +1,9 @@
 Thu Mar 18 12:07:09 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
+	* ftpd/ftpd_locl.h: remove krb5.h (breaks in ftpcmd.y)
+
+	* ftpd/ftpd.c: move include of krb5.h here
+
 	* ftpd/Makefile.am: include Makefile.am.common
 
 	* Makefile.am: include Makefile.am.common
