--- a/appl/popper/ChangeLog
+++ b/appl/popper/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 18 12:55:42 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* pop_pass.c: define KRB_VERIFY_SECURE if not defined
+
 Tue Mar 16 22:28:52 1999  Assar Westerlund  <assar@sics.se>
 
 	* pop_pass.c: krb_verify_user_multiple -> krb_verify_user
