define sub for html
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5607 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/doc/whatis.texi
+++ b/doc/whatis.texi
@@ -38,6 +38,12 @@ services can authenticate each other.
 @global@let@sub=@xsub
 @end tex
 
+@ifhtml
+@macro sub{arg}
+<\arg\>
+@end macro
+@end ifhtml
+
 @quotation
 @strong{Note:} This discussion is about Kerberos version 4, but version
 5 works similarly.
