--- a/lib/kafs/ChangeLog
+++ b/lib/kafs/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar 19 14:52:29 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* Makefile.am: add version-info
+
 Sat Feb 27 19:46:21 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: remove EXTRA_DATA (as of autoconf 2.13/automake
