--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar 19 14:52:57 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* Makefile.am: add version-info
+
 Thu Mar 18 12:53:32 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: remove include_dir hack
