--- a/lib/sl/ChangeLog
+++ b/lib/sl/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar 19 14:53:20 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* Makefile.am: add libss; add version-info
+
 Thu Mar 18 15:07:06 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: clean lex.c parse.c parse.h
