--- a/appl/telnet/ChangeLog
+++ b/appl/telnet/ChangeLog
@@ -1,3 +1,13 @@
+Thu Mar 18 11:20:16 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* telnetd/Makefile.am: include Makefile.am.common
+
+	* telnet/Makefile.am: include Makefile.am.common
+
+	* libtelnet/Makefile.am: include Makefile.am.common
+
+	* Makefile.am: include Makefile.am.common
+
 Mon Mar 15 17:40:53 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* telnetd/telnetd.c: replace perror/exit with fatalperror
