--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -10,6 +10,10 @@ Thu Mar 18 12:07:09 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: include Makefile.am.common
 
+	* ftp/Makefile.am: include Makefile.am.common
+
+	* common/Makefile.am: include Makefile.am.common
+
 Tue Mar 16 22:28:37 1999  Assar Westerlund  <assar@sics.se>
 
 	* ftpd/ftpd_locl.h: add krb5.h to get heimdal_version
