--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,3 +1,11 @@
+Fri Mar 19 15:12:31 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* kx.c: add gcc-braces
+
+Thu Mar 18 11:18:20 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* Makefile.am: include Makefile.am.common
+
 Thu Mar 11 14:58:32 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* writeauth.c: protoize
