--- a/lib/editline/ChangeLog
+++ b/lib/editline/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 18 11:22:55 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* Makefile.am: include Makefile.am.common
+
 Tue Mar 16 17:10:34 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* editline.c: remove protos for read/write
