--- a/lib/otp/ChangeLog
+++ b/lib/otp/ChangeLog
@@ -2,6 +2,10 @@ Fri Mar 19 14:52:48 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: add version-info
 
+Thu Mar 18 11:24:19 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* Makefile.am: include Makefile.am.common
+
 Sat Mar 13 22:27:10 1999  Assar Westerlund  <assar@sics.se>
 
 	* otp_parse.c: unsigned-ify
