--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,41 @@
+Sat Mar 20 00:08:59 1999  Assar Westerlund  <assar@sics.se>
+
+	* lib/krb5/Makefile.am: correct path to Makefile.am.common
+
+	* lib/kadm5/Makefile.am: correct path to Makefile.am.common
+
+	* lib/hdb/Makefile.am: correct path to Makefile.am.common SUFFIXES
+ 	and .x.c: add back old rules to make it work
+
+	* lib/gssapi/Makefile.am: correct path to Makefile.am.common
+
+	* lib/asn1/Makefile.am: correct path to Makefile.am.common
+ 	SUFFIXES and .x.c: add back old rules to make it work
+
+	* lib/45/Makefile.am: correct path to Makefile.am.common
+
+	* lib/Makefile.am: correct path to Makefile.am.common
+
+	* kuser/Makefile.am: correct path to Makefile.am.common
+
+	* kpasswd/Makefile.am: correct path to Makefile.am.common
+
+	* kadmin/Makefile.am: correct path to Makefile.am.common
+
+	* include/kadm5/Makefile.am: correct path to Makefile.am.common
+
+	* include/Makefile.am: correct path to Makefile.am.common
+
+	* doc/Makefile.am: correct path to Makefile.am.common
+
+	* appl/test/Makefile.am: correct path to Makefile.am.common
+
+	* appl/afsutil/Makefile.am: correct path to Makefile.am.common
+
+	* appl/Makefile.am: correct path to Makefile.am.common
+
+	* admin/Makefile.am: correct path to Makefile.am.common
+
 Fri Mar 19 14:48:03 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* lib/hdb/Makefile.am: add version-info
