--- a/appl/otp/ChangeLog
+++ b/appl/otp/ChangeLog
@@ -1,3 +1,7 @@
+Sat Mar 20 00:11:59 1999  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am: correct path to Makefile.am.common
+
 Thu Mar 18 12:08:58 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: include Makefile.am.common
