--- a/appl/popper/ChangeLog
+++ b/appl/popper/ChangeLog
@@ -1,3 +1,7 @@
+Sat Mar 20 00:12:09 1999  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am: correct path to Makefile.am.common
+
 Thu Mar 18 12:55:42 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* pop_pass.c: define KRB_VERIFY_SECURE if not defined
