--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,7 @@
+Sat Mar 20 00:12:39 1999  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am: correct path to Makefile.am.common
+
 Thu Mar 18 11:37:24 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: include Makefile.am.common
