--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 Sat Mar 20 00:08:59 1999  Assar Westerlund  <assar@sics.se>
 
+	* configure.in (gethostname): remove duplicate
+
 	* lib/krb5/Makefile.am: correct path to Makefile.am.common
 
 	* lib/kadm5/Makefile.am: correct path to Makefile.am.common
