--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 21 14:48:03 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* auth-modules.m4: tests for authentication modules
+
 Thu Mar 18 11:02:55 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am.common: make install-build-headers a multi
