--- a/appl/push/ChangeLog
+++ b/appl/push/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 21 18:02:10 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* Makefile.am: bindir -> libexecdir
+
 Sat Mar 20 00:12:26 1999  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: LDADD: add missing backslash
