--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,5 +1,11 @@
 Sun Mar 21 14:48:03 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
+	* Makefile.am.common: fix for automake bug/feature; add more LIB_*
+
+	* test-package.m4: fix typo
+
+	* check-man.m4: fix some typos
+
 	* auth-modules.m4: tests for authentication modules
 
 Thu Mar 18 11:02:55 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
