--- a/appl/xnlock/ChangeLog
+++ b/appl/xnlock/ChangeLog
@@ -2,6 +2,10 @@ Thu Mar 18 11:21:44 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: include Makefile.am.common
 
+Wed Mar 17 23:35:51 1999  Assar Westerlund  <assar@sics.se>
+
+	* xnlock.c (verify): use KRB_VERIFY_SECURE instead of 1
+
 Tue Mar 16 22:29:14 1999  Assar Westerlund  <assar@sics.se>
 
 	* xnlock.c: krb_verify_user_multiple -> krb_verify_user
