--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -6,6 +6,8 @@ Sat Mar 20 03:42:30 1999  Assar Westerlund  <assar@sics.se>
 
 Fri Mar 19 21:29:58 1999  Assar Westerlund  <assar@sics.se>
 
+	* Makefile.in: add eread, ewrite
+
 	* eread.c, ewrite.c: new files
 
 	* Makefile.am (libroken_la_SOURCES): add eread and ewrite
