*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5705 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/push/ChangeLog
+++ b/appl/push/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar 22 22:19:40 1999  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am: hesoid -> hesiod
+
 Sun Mar 21 18:02:10 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: bindir -> libexecdir
