--- a/appl/login/ChangeLog
+++ b/appl/login/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 23 14:17:40 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* login_locl.h: _PATH_UTMP
+
 Sat Mar 20 00:11:13 1999  Assar Westerlund  <assar@sics.se>
 
 	* login_locl.h: krb.h: add
