--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar 23 17:31:23 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* check-getpwnam_r-posix.m4: check for getpwnam_r, and if it's
+ 	posix or not
+
 Tue Mar 23 00:00:13 1999  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am.common (install_build_headers): try to make it work
