--- a/appl/login/ChangeLog
+++ b/appl/login/ChangeLog
@@ -2,6 +2,10 @@ Tue Mar 23 14:17:40 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* login_locl.h: _PATH_UTMP
 
+Sun Mar 21 15:02:31 1999  Johan Danielsson  <joda@blubb.pdc.kth.se>
+
+	* login.c: `-h' is host, not help
+
 Sat Mar 20 00:11:13 1999  Assar Westerlund  <assar@sics.se>
 
 	* login_locl.h: krb.h: add
