*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5733 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/push/ChangeLog
+++ b/appl/push/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar 24 04:37:04 1999  Assar Westerlund  <assar@sics.se>
+
+	* push.c (get_pobox): try to handle old and new hesiod APIs
+
 Mon Mar 22 22:19:40 1999  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: hesoid -> hesiod
