--- a/doc/ack.texi
+++ b/doc/ack.texi
@@ -39,6 +39,8 @@ Bugfixes, documentation, encouragement, and code has been contributed by:
 @email{allbery@@kf8nh.apk.net}
 @item Jun-ichiro itojun Hagino
 @email{itojun@@kame.net}
+@item Daniel Kouril
+@email{kouril@@informatics.muni.cz}
 @item and we hope that those not mentioned here will forgive us.
 @end table
 
