--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Mar 27 17:48:31 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* lib/krb5/crypto.c: n_fold -> _krb5_n_fold
+
+	* lib/krb5/n-fold.c: n_fold -> _krb5_n_fold
+
 Thu Mar 25 04:35:21 1999  Assar Westerlund  <assar@sics.se>
 
 	* lib/kadm5/set_keys.c (_kadm5_set_keys): free salt when zapping
@@ -57,6 +63,11 @@ Wed Mar 24 04:02:03 1999  Assar Westerlund  <assar@sics.se>
 
 	* include/bits.c (my_strupr): cast away some stupid warnings
 
+Tue Mar 23 14:34:44 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* lib/krb5/get_host_realm.c (krb5_get_host_realm): no infinite
+ 	loops, please
+
 Tue Mar 23 00:00:45 1999  Assar Westerlund  <assar@sics.se>
 
 	* lib/kadm5/Makefile.am (install_build_headers): recover from make
@@ -80,6 +91,8 @@ Sun Mar 21 15:08:49 1999  Johan Danielsson  <joda@blubb.pdc.kth.se>
 	* lib/krb5/get_default_realm.c: char* -> krb5_realm
 
 Sun Mar 21 14:08:30 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* include/bits.c: <bind/bitypes.h>
 
 	* lib/krb5/Makefile.am: create krb5-private.h
 
