--- a/lib/sl/ChangeLog
+++ b/lib/sl/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr  1 17:03:59 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* make_cmds.c: use getarg
+
 Tue Mar 23 14:36:21 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: don't rename
